--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            kimsungmo0108.github.io
+longtitle:        kimsungmo0108.github.io
 author:           HE Tao
 email:            sighingnow@gmail.com
 description: >
